--- a/src/main/resources/templates/infrastructure/security/forgotPasswordControllerTest.mustache
+++ b/src/main/resources/templates/infrastructure/security/forgotPasswordControllerTest.mustache
@@ -117,7 +117,8 @@ mockMvc.perform(post("/api/auth/reset-password")
 .content(objectMapper.writeValueAsString(dto)))
 .andExpect(status().isOk());
 
-var user = userRepository.findByUsernameAndTenantName(username,DEFAULT_TENANT).orElseThrow();
+var user = userRepository.findByUsernameAndTenantName(username,DEFAULT_TENANT).stream()
+        .findFirst().orElseThrow();
 assertThat(encoder.matches("newpass", user.getPassword())).isTrue();
 }
 
