--- a/src/main/resources/templates/infrastructure/security/passwordResetService.mustache
+++ b/src/main/resources/templates/infrastructure/security/passwordResetService.mustache
@@ -69,7 +69,10 @@ if (tokenEntity.getExpiration().isBefore(Instant.now())) {
 //todo move to full CQRS , by using a query to get the user
 var user =
 userRepo.findByUsernameAndTenantId(tokenEntity.getUsername(), metaRequest.getTenantId())
-.orElse(null);
+.stream()
+.findFirst()
+.orElse(null)
+;
 if (user == null) {
 log.info("User not found for username: {}", tokenEntity.getUsername());
 return false;
