--- a/src/main/resources/templates/presentation/createController.mustache
+++ b/src/main/resources/templates/presentation/createController.mustache
@@ -66,6 +66,8 @@ public ResponseEntity<{{name}}Response> add{{name}}(@Valid @RequestBody {{name}}
 		.tenantId(RequestContext.getTenantId(jwt)){{/isMultiTenant}}
 		.build();
 
+		metaRequest.setIsAdmin(RequestContext.isAdmin(jwt));
+
 	{{name}}Response response =  applicationService.create{{name}}(
 			request,
 			metaRequest
