--- a/src/main/resources/templates/presentation/updateWithFilesController.mustache
+++ b/src/main/resources/templates/presentation/updateWithFilesController.mustache
@@ -70,6 +70,8 @@ public ResponseEntity<{{name}}Response> add{{name}}(
 		.tenantId(RequestContext.getTenantId(jwt)){{/isMultiTenant}}
 	.build();
 
+	metaRequest.setIsAdmin(RequestContext.isAdmin(jwt));
+
 	{{name}}Response response = applicationService.update{{name}}(
 	{{name}}Id.create(id),
 	{{#hasFiles}}{{#fieldFiles}}{{nameCamelCase}},{{/fieldFiles}}{{/hasFiles}}{{#fields}}{{^isId}}
