feat: add translation

--- a/src/main/resources/templates/front/swift/entityListViewModel.mustache
+++ b/src/main/resources/templates/front/swift/entityListViewModel.mustache
@@ -156,7 +156,7 @@ func updateEntity(_ item: {{entity}},
 {{/fields}}
 ) {
 {{#fields}}
-	item.{{name}} = {{name}}
+	item.{{name}} = {{name}}{{#isLowerCase}}.lowercased(){{/isLowerCase}}
 {{#isManyToOne}}
     item.{{name}}LocalId = {{name}}LocalId
 {{/isManyToOne}}
