--- a/src/main/resources/templates/front/swift/entitySyncView.mustache
+++ b/src/main/resources/templates/front/swift/entitySyncView.mustache
@@ -19,7 +19,7 @@ struct {{entity}}SyncView: View {
             .disabled(isSyncing)
 
             if showMessage {
-                Text(message)
+                Text(t(message))
                     .foregroundColor(.blue)
                     .font(.subheadline)
             }
