--- a/src/main/resources/templates/front/swift/views/emptyStateView.mustache
+++ b/src/main/resources/templates/front/swift/views/emptyStateView.mustache
@@ -10,7 +10,7 @@ struct {{entity}}EmptyStateView: View {
                 .scaledToFit()
                 .frame(width: 80, height: 80)
                 .foregroundColor(.gray.opacity(0.6))
-            Text("No {{entity}}s yet")
+            Text(t("Aucune {{entity}} pour le moment."))
                 .font(.headline)
                 .foregroundColor(.secondary)
             Button("Add {{entity}}") {
