--- a/src/main/resources/templates/front/swift/views/trashContentView.mustache
+++ b/src/main/resources/templates/front/swift/views/trashContentView.mustache
@@ -17,7 +17,7 @@ struct {{entity}}TrashContentView: View {
                         .frame(width: 80, height: 80)
                         .foregroundColor(.gray.opacity(0.6))
 
-                    Text("Nothing in trash")
+                    Text(t("Rien dans la corbeille . (Voir la liste)"))
                         .font(.headline)
                         .foregroundColor(.secondary)
                 }
