--- a/src/main/resources/templates/front/swift/entityFormView.mustache
+++ b/src/main/resources/templates/front/swift/entityFormView.mustache
@@ -35,7 +35,7 @@ struct {{entity}}FormView: View {
     var body: some View {
         NavigationView {
             Form {
-                Section(header: Text("{{entity}} Information")) {
+                Section(header: Text("{{entity}} ")) {
                     {{#fields}}
                         {{^readOnly}}
                         {{^isEnum}}
@@ -66,7 +66,7 @@ struct {{entity}}FormView: View {
                     {{/hasType}}
                 }
                 Section {
-                    Button("Save", action: handleSave)
+                    Button(t("Enregistrer"), action: handleSave)
                         .frame(maxWidth: .infinity)
                         .padding()
                         .background(Color.blue)
@@ -74,10 +74,10 @@ struct {{entity}}FormView: View {
                         .cornerRadius(8)
                 }
             }
-            .navigationTitle(entity == nil ? "New {{entity}}" : "Edit {{entity}}")
+            .navigationTitle(entity == nil ? "Création {{entity}}" : "Modification {{entity}}")
             .toolbar {
                 ToolbarItem(placement: .cancellationAction) {
-                    Button("Cancel") { withAnimation { isPresented = false } }
+                    Button(t("Retour")) { withAnimation { isPresented = false } }
                 }
             }
             .onAppear(perform: populateForm)
