--- a/src/main/resources/templates/front/swift/views/groupHeaderView.mustache
+++ b/src/main/resources/templates/front/swift/views/groupHeaderView.mustache
@@ -39,7 +39,7 @@ struct {{entity}}ListHeaderView: View {
                         .frame(maxWidth: .infinity, alignment: .center)
                     }
                 } else {
-                    Button("Select Balance") {
+                    Button("Sélectionner Balance") {
                         showBalancePopup = true
                     }
                     .font(.headline)
