--- a/src/main/resources/templates/front/swift/entityListView.mustache
+++ b/src/main/resources/templates/front/swift/entityListView.mustache
@@ -143,7 +143,7 @@ var body: some View {
                         HStack {
                              VStack{
                                 Text("\(selected{{headerUpperCase}}?.currentBalance ?? 0.0 , specifier: "%.0f")")
-                                Text(selected{{headerUpperCase}}?.name ?? "Select {{headerUpperCase}}")
+                                Text(selected{{headerUpperCase}}?.name ?? "Sélectionner {{headerUpperCase}}")
 
                             }
                         }
