--- a/src/main/resources/templates/front/swift/views/listContentView.mustache
+++ b/src/main/resources/templates/front/swift/views/listContentView.mustache
@@ -20,7 +20,7 @@ struct {{entity}}ListContentView: View {
                     {{entity}}HeaderView(
                         title: "Indicators",
                         indicators: [
-                            "Total count": "\(active.count)"
+                            t("Totale"): "\(active.count)"
                         ]
                     )
                     .padding(.bottom)
